updated index files with examples

--- a/index.html
+++ b/index.html
@@ -10,7 +10,47 @@
 </head>
 <body>
     <header>Athlete Math</header>
+    <!-- would it be better to start with units of measurement, and then select workout type-->
     <main>
+
+      Laps
+      Ladder
+      Start at ___ laps 
+      Increase by ___ laps per round 
+      Rest laps per round: 
+      Total number of rounds:
+      Total laps will be: 
+
+      Pyramid
+      Start at ___ laps
+      increase by __ laps per round
+      rest laps per round: 
+      Top of the pyramid: 
+      Total laps will be
+
+      Descending Ladder
+      Start at ___ laps 
+      Decrease by ___ laps per round 
+      Rest laps per round: 
+      Total number of rounds:
+      Total laps will be: 
+
+      Straight sets: 
+      Laps per working set: 
+      Laps per resting set: 
+      rest laps per set: 
+      Total sets: 
+      Total laps will be: 
+  
+
+      <p>Start at: </p>
+      <p>Units of measurement:  </p>
+      <p>Add rest units: </p>
+      <p>Increase by: </p>
+      <p>Total number of rounds: </p>
+
+      <p>Total work will be: </p>
+
         <div class="card" style="width: 18rem;"> <!--start of card-->
             <div class="card-header"><!--start of card header-->
               Ladder Workouts
