--- a/index.html
+++ b/index.html
@@ -8,16 +8,7 @@
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
-    integrity="sha384-9ndCyUa8CtvzjV2VulKfC0DqW3OZnW5VcDpl+3N2V9fzO8C5sp5RW5pAoVvvEJTF"
-    crossorigin="anonymous"
   />
-
-  <script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-HoA4m9rSLa8qnLqNwUPw+Oe3hSgY1LJv2KPfdo/U7hOx5PKN6A8ylCwlCWX2tx+x"
-  crossorigin="anonymous"></script>
-
-  <script src="index.js"></script>
 </head>
 <body>
   <!-- Horizontal Navbar -->
@@ -50,6 +41,14 @@
     <p>Select a workout style from the menu above to learn more.</p>
   </main>
 
- 
+  <!-- Bootstrap JS -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HoA4m9rSLa8qnLqNwUPw+Oe3hSgY1LJv2KPfdo/U7hOx5PKN6A8ylCwlCWX2tx+x"
+    crossorigin="anonymous"
+  ></script>
+
+  <!-- Custom JavaScript -->
+  <script src="index.js"></script>
 </body>
 </html>
