--- a/Pyramid.html
+++ b/Pyramid.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pyramid Workout</title>
-  <!-- Bootstrap CSS -->
+  <!-- Bootstrap CSS (without integrity check) -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
   />
-  
 </head>
 <body>
   <!-- Navbar -->
@@ -36,60 +35,62 @@
     </div>
   </nav>
 
-  <!-- Form -->
-  <div class="container mt-5">
-    <h2 class="mb-4">Pyramid Workout Setup</h2>
+  <!-- Form Content -->
+  <div class="container my-5">
+    <h2 class="mb-4 text-center">Pyramid Workout Setup</h2>
     <form id="pyramidForm">
       <div class="row mb-3">
-        <div class="col-md-6">
+        <div class="col-12 col-md-6 mb-3 mb-md-0">
           <label for="baseStep" class="form-label">Base Step</label>
           <input type="number" class="form-control" id="baseStep" required />
         </div>
-        <div class="col-md-6">
+        <div class="col-12 col-md-6">
           <label for="increaseStep" class="form-label">Increase per Step</label>
           <input type="number" class="form-control" id="increaseStep" required />
         </div>
       </div>
-      
+
       <div class="row mb-3">
-        <div class="col-md-6">
+        <div class="col-12 col-md-6 mb-3 mb-md-0">
           <label for="restPerStep" class="form-label">Rest per Step</label>
-          <input type="number" class="form-control" id="restPerStep" required />
+          <input type="text" class="form-control" id="restPerStep" placeholder="e.g., 0, 1 lap, 100m" />
         </div>
-        <div class="col-md-6">
+        <div class="col-12 col-md-6">
           <label for="highestStep" class="form-label">Highest Step</label>
-          <input type="number" class="form-control" id="highestStep" required />
+          <input type="number" class="form-control" id="highestStep" />
         </div>
       </div>
 
-      <div class="mb-3">
-        <label for="goalCount" class="form-label">Goal Count</label>
-        <input type="number" class="form-control" id="goalCount" required />
+      <div class="row mb-3">
+        <div class="col-12 col-md-6 mb-3 mb-md-0">
+          <label for="goalCount" class="form-label">Goal Count</label>
+          <input type="number" class="form-control" id="goalCount" />
+        </div>
+        <div class="col-12 col-md-6">
+            <label for="unitSelect" class="form-label">Measurement Type</label>
+            <select class="form-select form-select-lg" id="unitSelect" required>
+              <option value="">Select Unit</option>
+              <option value="reps">Reps</option>
+              <option value="laps">Laps</option>
+              <option value="time">Time</option>
+              <option value="distance">Distance</option>
+            </select>
+          </div>
+          
       </div>
 
-      <div class="mb-4">
-        <label for="unitSelect" class="form-label">Measurement Type</label>
-        <select class="form-select" id="unitSelect" required>
-          <option value="">Select Unit</option>
-          <option value="reps">Reps</option>
-          <option value="laps">Laps</option>
-          <option value="time">Time</option>
-          <option value="distance">Distance</option>
-        </select>
+      <div class="text-center">
+        <button type="submit" class="btn btn-primary px-4">Generate Workout</button>
       </div>
-
-      <button type="submit" class="btn btn-primary">Generate Workout</button>
     </form>
+
+    <!-- Output Display -->
+    <div id="workoutOutput" class="mt-5"></div>
   </div>
 
-  <div id="workoutOutput" class="mt-5"></div>
-
-  <!-- Bootstrap JS -->
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-  ></script>
-
-  <!-- Future JavaScript (pyramid.js) -->
+  <!-- Bootstrap JS (no integrity) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Custom Script -->
   <script src="pyramid.js"></script>
 </body>
 </html>
