--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a class="navbar-brand" href="index.html">Home</a>
       <ul class="navbar-nav flex-row">
         <li class="nav-item me-3">
-          <a class="nav-link text-white" href="pyramid.html">Pyramid</a>
+          <a class="nav-link text-white" href="Pyramid.html">Pyramid</a>
         </li>
         <li class="nav-item me-3">
           <a class="nav-link text-white" href="reverse-pyramid.html">Reverse Pyramid</a>
