let's build this

--- a/Pyramid.html
+++ b/Pyramid.html
@@ -14,26 +14,18 @@
 
 </head>
 <body>
-  <!-- Navbar -->
   <nav class="navbar navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Home</a>
       <ul class="navbar-nav flex-row">
         <li class="nav-item me-3">
-          <a class="nav-link text-white" href="pyramid.html">Pyramid</a>
+          <a class="nav-link text-white" href="Pyramid.html">Pyramid</a>
         </li>
-        <li class="nav-item me-3">
-          <a class="nav-link text-white" href="reverse-pyramid.html">Reverse Pyramid</a>
-        </li>
-        <li class="nav-item me-3">
-          <a class="nav-link text-white" href="ladder.html">Ladder</a>
-        </li>
+        
         <li class="nav-item me-3">
           <a class="nav-link text-white" href="descending-ladder.html">Descending Ladder</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="straight-sets.html">Straight Sets</a>
-        </li>
+        
       </ul>
     </div>
   </nav>
