--- a/descending-ladder.html
+++ b/descending-ladder.html
@@ -18,20 +18,13 @@
       <a class="navbar-brand" href="index.html">Home</a>
       <ul class="navbar-nav flex-row">
         <li class="nav-item me-3">
-          <a class="nav-link text-white" href="pyramid.html">Pyramid</a>
+          <a class="nav-link text-white" href="Pyramid.html">Pyramid</a>
         </li>
-        <li class="nav-item me-3">
-          <a class="nav-link text-white" href="reverse-pyramid.html">Reverse Pyramid</a>
-        </li>
-        <li class="nav-item me-3">
-          <a class="nav-link text-white" href="ladder.html">Ladder</a>
-        </li>
+        
         <li class="nav-item me-3">
           <a class="nav-link text-white" href="descending-ladder.html">Descending Ladder</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="straight-sets.html">Straight Sets</a>
-        </li>
+        
       </ul>
     </div>
   </nav>
@@ -57,7 +50,7 @@
       <div class="row mb-3">
         <div class="col-12 col-md-6 mb-3 mb-md-0">
           <label for="topStep" class="form-label">Top Step</label>
-          <input type="number" class="form-control" id="topStep" placeholder="e.g. 10" required />
+          <input type="number" class="form-control" id="topStep" placeholder="e.g. 10" />
         </div>
         <div class="col-12 col-md-6">
           <label for="decrementStep" class="form-label">Decrement Interval</label>
