--- a/index.html
+++ b/index.html
@@ -19,26 +19,19 @@
         <li class="nav-item me-3">
           <a class="nav-link text-white" href="Pyramid.html">Pyramid</a>
         </li>
-        <li class="nav-item me-3">
-          <a class="nav-link text-white" href="reverse-pyramid.html">Reverse Pyramid</a>
-        </li>
-        <li class="nav-item me-3">
-          <a class="nav-link text-white" href="ladder.html">Ladder</a>
-        </li>
+        
         <li class="nav-item me-3">
           <a class="nav-link text-white" href="descending-ladder.html">Descending Ladder</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="straight-sets.html">Straight Sets</a>
-        </li>
+        
       </ul>
     </div>
   </nav>
 
   <!-- Main content -->
   <main class="container mt-5">
-    <h1>Welcome to Workout Styles</h1>
-    <p>Select a workout style from the menu above to learn more.</p>
+    <h1>Welcome to Workout Builder</h1>
+    <p>Select a workout format to get started.</p>
   </main>
 
   <!-- Bootstrap JS -->
